--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,32 @@
 *.class
+*.log.*
+*.log
+
+.metadata/
+RemoteSystemsTempFiles/
+.DS_Store/
+.DS_Store
+Servers/
+bin/
+upload_img/
+classes/
+backup/
+.recommenders
+.gitignore
+.idea/
+.settings/
+.classpath
+*.command
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.ear
+*.log
+*.zip
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
